traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:31: error: not found: value finx
    finx=1
    ^TraversalDiagonal:39: error: not found: value finx
    if (diagc>=6) {setPos(finx,6); finx=finx+1}
                          ^TraversalDiagonal:39: error: not found: value finx
    if (diagc>=6) {setPos(finx,6); finx=finx+1}
                                   ^